[tool.poetry]
name = "retake-search"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "retake_search"}]

[tool.poetry.dependencies]
python = "^3.11"
retakesearch = "^0.1.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
