[tool.poetry]
name = "distributed-tracing-example"
version = "0.1.0"
description = ""
authors = ["YeonwooSung <neos960518@gmail.com>"]
readme = "README.md"
packages = [{include = "distributed_tracing_example"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
requests = "^2.31.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
